[gd_scene load_steps=7 format=3 uid="uid://t6gmeojeiojn"]

[ext_resource type="Script" path="res://scripts/torch.gd" id="1_e8xi5"]
[ext_resource type="Script" path="res://scripts/torch_hit.gd" id="2_xkjt7"]
[ext_resource type="Texture2D" uid="uid://67j0jrd3vdd2" path="res://art/lit_torch.png" id="3_4ge3m"]
[ext_resource type="Texture2D" uid="uid://c742m3dsbhh4p" path="res://art/unlit_torch.png" id="4_yldiq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0tmad"]
radius = 12.0

[sub_resource type="SpriteFrames" id="SpriteFrames_12vhl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4ge3m")
}, {
"duration": 1.0,
"texture": ExtResource("4_yldiq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Torch" type="Node2D"]
script = ExtResource("1_e8xi5")

[node name="torch_hit" type="AnimatableBody2D" parent="."]
collision_layer = 8
collision_mask = 12
script = ExtResource("2_xkjt7")

[node name="Area2D" type="Area2D" parent="torch_hit"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="torch_hit/Area2D"]
shape = SubResource("CircleShape2D_0tmad")
debug_color = Color(0.717591, 0.468928, 0.305282, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="torch_hit"]
sprite_frames = SubResource("SpriteFrames_12vhl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="torch_hit"]
shape = SubResource("CircleShape2D_0tmad")
debug_color = Color(0.686275, 0.478431, 0.411765, 0.792157)

[connection signal="body_entered" from="torch_hit/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="torch_hit/Area2D" to="." method="_on_area_2d_body_exited"]
